sublime-gulp.log
Remember that you can report errors and get help in https://github.com/NicoSantangelo/sublime-gulp

09-23-2017 22:12:
/home/rodion/Sites/Radio100/.sublime-gulp-tmp.js:33
			basedir:'/home/rodion/Sites/Radio100';
			                                     ^
SyntaxError: Unexpected token ;
    at Object.exports.runInThisContext (vm.js:76:16)
    at Module._compile (module.js:513:28)
    at Object.Module._extensions..js (module.js:550:10)
    at Module.load (module.js:458:32)
    at tryModuleLoad (module.js:417:12)
    at Function.Module._load (module.js:409:3)
    at Module.require (module.js:468:17)
    at require (internal/module.js:20:19)
    at requireGulp (/home/rodion/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (/home/rodion/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:83:12)


09-23-2017 22:12:
/home/rodion/Sites/Radio100/.sublime-gulp-tmp.js:33
			basedir:'/home/rodion/Sites/Radio100';
			                                     ^
SyntaxError: Unexpected token ;
    at Object.exports.runInThisContext (vm.js:76:16)
    at Module._compile (module.js:513:28)
    at Object.Module._extensions..js (module.js:550:10)
    at Module.load (module.js:458:32)
    at tryModuleLoad (module.js:417:12)
    at Function.Module._load (module.js:409:3)
    at Module.require (module.js:468:17)
    at require (internal/module.js:20:19)
    at requireGulp (/home/rodion/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (/home/rodion/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:83:12)
